// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate > one argument routine 1`] = `
{
  "sql/schema.ts": "/* BEWARE: This file was generated by pg-nano. Any changes you make will be overwritten. */
import { bindQueryValue } from 'pg-nano'

export declare namespace multiplyBy2 {
  type Params = { x: number }
  type Result = number
}

export const multiplyBy2 = /* @__PURE__ */ bindQueryValue<multiplyBy2.Params, multiplyBy2.Result>("multiply_by_2", $ => $.arity(1, 1).namedArgs(["x"]))
",
  "sql/typeData.ts": null,
}
`;

exports[`generate > zero argument routine 1`] = `
{
  "sql/schema.ts": "/* BEWARE: This file was generated by pg-nano. Any changes you make will be overwritten. */
import { bindQueryValue } from 'pg-nano'

export declare namespace fortyTwo {
  type Params = []
  type Result = number
}

export const fortyTwo = /* @__PURE__ */ bindQueryValue<fortyTwo.Params, fortyTwo.Result>("forty_two", $ => $.arity(0, 0))
",
  "sql/typeData.ts": null,
}
`;
